--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -6,6 +6,25 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
+
+                    <li>
+                        <a href="https://www.flickr.com/photos/andrewphotography" target="_blank" title="Andrew's Flickr Photostream">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.instagram.com/asdsgn" target="_blank" title="Andrew's Instagram">
+                            <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                    </li>
+
                     <% if (theme.twitter_url) { %>
                         <li>
                             <a href="<%- theme.twitter_url%>" target="_blank">
@@ -30,7 +49,7 @@
 
                     <% if (theme.github_url) { %>
                         <li>
-                            <a href="<%- theme.github_url%>" target="_blank">
+                            <a href="<%- theme.github_url%>" target="_blank" title="Andrew's Github">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -71,6 +90,7 @@
                             </a>
                         </li>
                     <% } %>
+
                 </ul>
                 <p class="copyright text-muted">&copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br></p>
                 <p class="copyright text-muted">Original Theme <a target="_blank" href="http://startbootstrap.com/template-overviews/clean-blog/">Clean Blog</a> from <a href="http://startbootstrap.com/" target="_blank">Start Bootstrap</a></p>
