--- a/layout/_partial/google-analytics.ejs
+++ b/layout/_partial/google-analytics.ejs
@@ -6,6 +6,7 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', '<%= theme.google_analytics %>', 'auto');
+        ga('set', 'anonymizeIp', true);
         ga('send', 'pageview');
 
     </script>
